[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dl-benchmark-tool"
version = "0.1.0"
description = "A comprehensive deep learning model benchmarking tool"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["deep learning", "benchmark", "pytorch", "performance", "AI"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=1.9.0",
    "torchvision>=0.10.0",
    "numpy>=1.19.0",
    "psutil>=5.8.0",
    "Pillow>=8.0.0",
    "tqdm>=4.60.0",
    "timm>=0.6.0",
]

[project.optional-dependencies]
full = [
    "ultralytics>=8.0.0",
    "segmentation-models-pytorch>=0.3.0",
    "nvidia-ml-py3>=7.352.0",
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
]

[project.scripts]
dl-benchmark = "dl_benchmark.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/dl-benchmark-tool"
Repository = "https://github.com/yourusername/dl-benchmark-tool.git"
Documentation = "https://github.com/yourusername/dl-benchmark-tool#readme"
"Bug Tracker" = "https://github.com/yourusername/dl-benchmark-tool/issues"